# chill-labs-backend

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  cli.sh
.sqlx/: query-047e4f46a3f1ca56c58d3af32b6e3f650b190a6acadc7a5763a208964e4e9c2c.json  query-0c074c93839d0bdd11610c62d2a463b0f686bf745090e28836c2a23b53d1f9d7.json  query-26407eddf21800d4a17ce916e329db2cf6e02100c86d20e7448dfa7076c61be2.json  query-3fd8c001f81eb655ab70dfb56d2a92b29aa960c4584ab410a06e546b969507cc.json  query-4c52ae1a27bc2ca03c767a8659d7f2e76b37210f65f0f826cb506a5b3d6bf780.json  query-6892f87c8185eb602dd3755ad6eb4d69e3f9359a4aae230fd60b463c1cfec062.json  query-6f1a76c989d29334aa248027c062da95a86a1c58087765a12080bc807c4778c1.json  query-7025079648c8555acf83d00db3b70fb3ec7319dd4f0a7b3e09e68011c05fe255.json  query-79d509a9118e4faa552459325d8b1e70ec37b2fa649de038a993055b6cbb2732.json  query-7f5e916da93b8f44cd979fcfad19c1d7d5396f3d39b12b8e9cb710be54d0ae1c.json  query-a628adbcf2ae26db18a8246b435ac2e2cd12296a9f5022f14174c841e94b2ff8.json  query-ac23a72d66e7e94f8a4a502357a17ed38611b6cc5beb23f0d39ace8ae0c97ac7.json  query-bd9b35f76ed52436295e35f8752fe8e55786b9f311a9a7752cd94d3910f12113.json  query-c7496f28fd5af8166d6ca9252258e471dde72260f0306a94491bee812ddd307a.json  query-d53c302a81c7ac571b1dd83a8e71ade4bdab42abd37cf92cbcd2c273614e0012.json  query-f4be0b75e3984c2482a871f78d2911de11ae5afba612f117b3beeecbcf0fa046.json
crud-macros/: Cargo.toml
database/: atlas.hcl  schema.sql
docs/: AUTHORIZATION_PATTERN.md  AUTH_DOMAIN.md  AUTH_IMPLEMENTATION_SUMMARY.md  FRONTEND_AUTH_GUIDE.md  FRONTEND_VOCAB_GUIDE.md
(+171 files in other folders)
