[package]
name = "english-coaching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.15"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
arc-swap = "1.7"

tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2"

tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
axum-macros = "0.5"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = "0.5"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "macros",
] }
uuid = { version = "1.16", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
lettre = { version = "0.11", features = [
    "builder",
    "tokio1",
    "tokio1-native-tls",
] }
rand = { version = "0.9", features = ["std"] }
thiserror = "2.0"
axum-extra = { version = "0.10.1", features = ["cookie"] }
